tests/baselines/reference/multiline.errors.txt
a.ts(12,1): error TS2578: Unused '@ts-expect-error' directive.
b.tsx(32,1): error TS2578: Unused '@ts-expect-error' directive.


==== a.ts (1 errors) ====
    export const texts: string[] = [];
    
    /**
     @ts-ignore */
    texts.push(100);
    
    /**
     @ts-expect-error */
    texts.push(100);
    
    /**
     @ts-expect-error */
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    texts.push("100");
    
==== b.tsx (1 errors) ====
    import * as React from "react";
    
    export function MyComponent(props: { foo: string }) {
      return <div />;
    }
    
    let x = (
      <div>
        {/*
       @ts-ignore */}
        <MyComponent foo={100} />
    
        {/*@ts-ignore*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*
       // @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*
       * @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*@ts-expect-error*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
        <MyComponent foo={"hooray"} />
      </div>
    );
    